# openbag

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  openbag_test.mcap
.github/workflows/: ci.yml  codeql.yml
config/: buffer.yaml  recorder.yaml  storage.yaml
env/: install_base.sh  install_conda.sh  install_dev.sh  install_graphics.sh  install_runtime.sh  setup_env.sh
examples/: CMakeLists.txt  op_topic_player.cc  op_topic_publisher.cc  op_topic_recorder.cc  op_topic_subscriber.cc
examples/message/: general.idl  test.proto
include/: utils.hpp
include/link/: dds_participant.hpp  link.hpp  link_dds_publisher.hpp  link_dds_subscriber.hpp  link_publisher.hpp  link_subscriber.hpp  link_transport.hpp
include/openbag/: buffer.hpp  common.hpp  config.hpp  openbag.hpp  player.hpp  proto_utils.hpp  reader.hpp  recorder.hpp  storage.hpp  transport.hpp
tools/: build.sh  function.bash  lib_update.sh
